# zicBox

./: .clang-format  .gitignore  .gitmodules  .gitmodules_ssh  .prettierrc.json  01_INSTALLATION.md  02_CONFIG.md  CMakeLists.txt  CONTRIBUTE.md  GETTING_STARTED.md  NOTE.md  PCB_PCB_zicbox_2023-10-17.json  PCB_PCB_zicbox_8_2023-10-18.json  README.md  SDL_EventHandler.h  UI.md  UiPlugin.h  audioPluginHandler.h  config.cfg  config.h  config.json  config.ui  config800.cfg  config_audio800.cfg  controllerList.h  controllers.h  def.h  demo.dust  demo.script  doc.js  draw.h  encoder-top.bak.gcode  encoder-top.gcode  encoder-top_150x8.gcode  encoder-top_500x3.gcode  encoder.kicad_pcb  encoder.kicad_pro  encoder.pcb  encoder2-top.gcode  encoder2.pcb  (+60 more)
.github/: FUNDING.yml
ai/: genDesc copy.js  genDesc.js  lib.js  llm.js  llm2.2.js  llm2.js  llm3.js  package-lock.json  package.json  query.js  query2.js  query3.js  rag2.js  rag2Query.js  rag2Query2.js
audio/: AdsrEnvelop.h  AsrEnvelop.h  BandEq.h  Clock.h  Compressor.h  Envelop.h  EnvelopDrumAmp.h  EnvelopDrumTransient.h  EnvelopMorph.h  EnvelopRelative.h  EnvelopRelative.old.h  EnvelopeTableGenerator.h  Eq.h  FastWaveform.h  Grains.h  KickEnvTableGenerator.h  KickEnvTableGenerator.html  KickTransientTableGenerator.h  Lfo.h  MFx.h  MMfilter.h  MultiFx.h  NoiseGenerator.h  Scatter.h  Scatter2Channels.h  ScatterXY.h  Sequencer.h  Sequencer2.h  Serializable.h  Tape.h  (+21 more)
pico/: CMakeLists.txt  README.md  main.cpp  main_CH1115.cpp  main_CH1115_2.cpp  main_CH1115_3.cpp  main_SDD1306.cpp  main_SSD13?_64x48.cpp  main_audio.cpp  makefile
(+2965 files in other folders)
